index.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}
body::-webkit-scrollbar {
    width: 0px;
}

/* Navbar */
nav{
    /* border: 2px solid red; */
    background: rgba(13, 33, 97);
    color: white;
    width: 100%;
    /* padding: 10px 0; */
    z-index: 1;
    position: sticky;
    top: 0;
}
nav ul{
    display: flex;
    /* border: 2px solid red; */
    justify-content: space-between;
    width: 50vw;
}
nav ul li{
    list-style: none;
    display: flex;
    align-items: center;
    font-size: 1.5rem;
}
.comname{
    /* border: 2px solid red; */
    transform: translateX(50%);
    cursor: pointer;
}
.comname a{
    text-decoration: none;
    color: white;
}
nav ul li img{
    width: 50px;
    height: 50px;
    border-radius: 50%;
    margin: 10px;
    margin-left: 2rem;
}

/* Name Section */
.container{
    position: relative;
    /* border: 2px solid red; */
    height: 90vh;
    display: flex;
    color: rgb(255, 255, 255);
    align-items: center;
    justify-content: end;
}
.container .maincont{
    /* border: 2px solid red; */
    height: 20rem;
    width: 35rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    transform: translateX(-10%);
    /* margin-right: 10rem; */
}
.container .maincont p{
    /* letter-spacing: 1px; */
    text-align: center;
    line-height: 1.5rem;
}
.container .maincont .name{
    font-size: 4rem;
    margin-bottom: 2rem;
}
.container::before{
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
    width: 100%;
    height: 100%;
    background: url("codingLogo.png") no-repeat;
    opacity: 0.7;
    background-size: contain;
    background-position: left top;
}
.container::after{
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    z-index: -2;
    width: 100%;
    height: 100%;
    background: rgba(29, 15, 71, 0.705);
    opacity: 0.9;
    background-size: cover;
}
section{
    padding: 2rem 0;
}
.boxes{
    display: flex;
    align-items: center;
    justify-content: center;
    /* border: 2px solid red; */
}
.language{
    display: flex;
    position: relative;
    width: 40rem;
    height: 25rem;
    margin: 0 1.5rem;
    margin-top: 2rem;
    box-shadow: 0 8px 15px 8px rgba(0, 0, 0, 0.2);
    overflow: hidden;
}
#outer-box{
    display: flex;
    width: 200rem;
    position: absolute;
    left: 0;
    height: 100%;
    transition: left 0.5s;
    /* border: 2px solid red; */
}
.box{
    /* position: absolute; */
    /* left: 0; */
    display: flex;
    /* flex-wrap: wrap; */
    /* border: 2px solid red; */
    flex-direction: column;
    align-items: center;
    /* justify-content: center; */
    width: 40rem;
    height: 100%;
    padding: 1rem 2rem;
    background: rgba(43, 11, 158, 0.13);
}
#css{
    /* left: 100%; */
}
#js{
    /* left: 200%; */
}
#mysql{
    /* left: 300%; */
}
.langname{
    display: flex;
    flex-wrap: wrap;
    margin: 1rem 0 ;
    color: rgb(48, 28, 119);
    font-size: 1.5rem;
}
.aboutlang{
    display: flex;
    flex-wrap: wrap;
    letter-spacing: 0.5px;
    line-height: 1.5rem;
    font-size: 1rem;
    text-align: justify;
    margin-top: 1rem;
}
.change{
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 1rem 1rem;
    /* border: 2px solid red; */
}
.buttons{
    border: 2px solid gray;
    display: flex;
    border-radius: 0.5rem;
    overflow: hidden;
}
.buttons span{
    cursor: pointer;
    height: 100%;
    margin: 0;
    font-size: 1.5rem;
    padding: 0.4rem 0.9rem;
}
#startbtn{
    /* border: 2px solid red; */
    padding: 0.4rem 1rem;
    font-size: 1rem;
    letter-spacing: 1.2px;
    background: rgba(43, 11, 158, 0.842);
    color: white;
    position: absolute;
    bottom: 5%;
}
#startbtn a{
    position: relative;
    color: white;
    text-decoration: none;
    /* border-bottom: 1px solid white; */
}
#startbtn a:hover .bodbot{
    position: absolute;
    bottom: 0;
    left: 0;
    height: 1px;
    width: 100%;
    animation: motion 0.5s ease-in-out 1;
    background-color: white;
}
@keyframes motion{
    from{
        width: 0%;
    }
    to{
        width: 100%;
    }
}
.buttons span:nth-child(2), span:nth-child(4){
    border-right: 2px solid gray;
    border-left: 2px solid gray;
}
.buttons span:hover{
    background-color: rgba(69, 61, 114, 0.795);
    color: white;
    transition: 0.2s;
}
.active{
    background-color: rgba(69, 61, 114, 0.795);
    color: white;
    box-shadow: inset 0 1px 4px 2px rgba(0, 0, 0, 0.25);
}
.active:hover{
    background: transparent;
}

/* Media Queries */
@media screen and (max-width: 768px) {
    nav{
        position: sticky;
    }
    .comname a{
        font-size: 1.3rem;
    }
    .container{
        height: 500px;
        align-items: flex-end;
        justify-content: center;
    }
    .container::before{
        height: 60%;
        background-position: center top;
    }
    .container .maincont{
        transform: none;
        padding: 1.5rem;
    }
    .container .maincont .name{
        font-size: 2.5rem;
    }
    .container .maincont p{
        line-height: 1.2rem;
        font-size: 0.9rem;
    }
    .buttons span{
        cursor: pointer;
        height: 100%;
        margin: 0;
        font-size: 1.3rem;
        padding: 0.4rem 0.9rem;
    }
    .box{
        background: rgba(43, 11, 158, 0.1);
    }
    .aboutlang{
        display: flex;
        flex-wrap: wrap;
        letter-spacing: 0.5px;
        line-height: 1.4rem;
        font-size: 0.8rem;
        margin-top: 0.6rem;
    }
}
@media screen and (max-width: 400px){
    nav ul li img{
        width: 40px;
        height: 40px;
        margin-left: 1.5rem;
    }
    .box{
        background: rgba(43, 11, 158, 0.06);
    }
    .comname a{
        font-size: 1.2rem;
    }
    .language{
        display: flex;
        position: relative;
        width: 40rem;
        height: 30rem;
        margin: 0 1.5rem;
        margin-top: 2rem;
        box-shadow: 0 8px 15px 8px rgba(0, 0, 0, 0.2); 
        overflow: hidden;
    }
}
@media screen and (max-width: 350px) {
    nav ul li img{
        width: 30px;
        height: 30px;
        margin-left: 1.3rem;
    }
    .container .maincont .name{
        font-size: 1.7rem;
    }
    .container .maincont p{
        line-height: 1rem;
        font-size: 0.8rem;
    }
    .buttons{
        flex-wrap: wrap;
    }
    .buttons span{
        display: flex;
        justify-content: center;
        width: 50%;
        cursor: pointer;
        height: 100%;
        margin: 0;
        font-size: 1rem;
        padding: 0.4rem 0.9rem;
        border-radius: 0;
    }
    .buttons span:last-child{
        width: 100%;
        border-top: 1px solid gray;
        border-left: none;
    }
}

